Use Paths.get insted of Path.of